# toxicity_sumarizer

./: README.md  entry_point_as_google_colab.ipynb  pyproject.toml
config/: config.yaml  config_test_run.yaml
llm_summarize/: data_preparation_and_generation.py  grpo_alignment.py  models_evaluation.py  sft_lora_train.py
notebooks/: test_task_raw.ipynb
outputs/: base_predictions.jsonl  evaluation_results.csv  grpo_predictions.jsonl  sft_predictions.jsonl
scripts/: entry_point.py
